Analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instruccionesglb
Rule 2     instruccionesglb -> instruccionesglb instruccionglb
Rule 3     instruccionesglb -> instruccionglb
Rule 4     instruccionglb -> funcionINS PUNTOCOMA
Rule 5     instruccionglb -> declaracionglb PUNTOCOMA
Rule 6     instruccionglb -> printINS PUNTOCOMA
Rule 7     instruccionglb -> llamadaFunc PUNTOCOMA
Rule 8     instruccionglb -> ifINS PUNTOCOMA
Rule 9     instruccionglb -> whileINS PUNTOCOMA
Rule 10    instruccionglb -> forINS PUNTOCOMA
Rule 11    instruccionglb -> newStruct PUNTOCOMA
Rule 12    instruccionglb -> pushArreglo PUNTOCOMA
Rule 13    instruccionglb -> asignacionStruct PUNTOCOMA
Rule 14    instruccionglb -> asignacionArreglo PUNTOCOMA
Rule 15    declaracionglb -> ID
Rule 16    declaracionglb -> ID IGUAL expresion
Rule 17    declaracionglb -> ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
Rule 18    funcionINS -> FUNCTION ID PARIZQ PARDER sentencia END
Rule 19    funcionINS -> FUNCTION ID PARIZQ params PARDER sentencia END
Rule 20    funcionINS -> FUNCTION ID PARIZQ PARDER DOSPUNTOS DOSPUNTOS tipos sentencia END
Rule 21    funcionINS -> FUNCTION ID PARIZQ params PARDER DOSPUNTOS DOSPUNTOS tipos sentencia END
Rule 22    params -> params COMA ID
Rule 23    params -> params COMA ID DOSPUNTOS DOSPUNTOS tipos
Rule 24    params -> ID
Rule 25    params -> ID DOSPUNTOS DOSPUNTOS tipos
Rule 26    llamadaFunc -> ID PARIZQ PARDER
Rule 27    llamadaFunc -> ID PARIZQ listParams PARDER
Rule 28    listParams -> listParams COMA expresion
Rule 29    listParams -> expresion
Rule 30    returnINS -> RETURN
Rule 31    returnINS -> RETURN expresion
Rule 32    instrucciones -> instrucciones instruccion
Rule 33    instrucciones -> instruccion
Rule 34    instruccion -> declaracionINS PUNTOCOMA
Rule 35    instruccion -> printINS PUNTOCOMA
Rule 36    instruccion -> llamadaFunc PUNTOCOMA
Rule 37    instruccion -> ifINS PUNTOCOMA
Rule 38    instruccion -> returnINS PUNTOCOMA
Rule 39    instruccion -> whileINS PUNTOCOMA
Rule 40    instruccion -> forINS PUNTOCOMA
Rule 41    instruccion -> breakINS PUNTOCOMA
Rule 42    instruccion -> continueINS PUNTOCOMA
Rule 43    instruccion -> newStruct PUNTOCOMA
Rule 44    instruccion -> pushArreglo PUNTOCOMA
Rule 45    instruccion -> asignacionStruct PUNTOCOMA
Rule 46    instruccion -> asignacionArreglo PUNTOCOMA
Rule 47    sentencia -> instrucciones
Rule 48    printINS -> PRINTLN PARIZQ listParams PARDER
Rule 49    printINS -> PRINTLN PARIZQ PARDER
Rule 50    printINS -> PRINT PARIZQ listParams PARDER
Rule 51    printINS -> PRINT PARIZQ PARDER
Rule 52    declaracionINS -> ID
Rule 53    declaracionINS -> ID IGUAL expresion
Rule 54    declaracionINS -> ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
Rule 55    declaracionINS -> accesos ID
Rule 56    declaracionINS -> accesos ID IGUAL expresion
Rule 57    declaracionINS -> accesos ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
Rule 58    tipos -> INT64
Rule 59    tipos -> FLOAT64
Rule 60    tipos -> STRING
Rule 61    tipos -> BOOL
Rule 62    tipos -> CHAR
Rule 63    accesos -> LOCAL
Rule 64    accesos -> GLOBAL
Rule 65    asignacionStruct -> accesoStruct IGUAL expresion
Rule 66    asignacionArreglo -> accesoArreglo IGUAL expresion
Rule 67    whileINS -> WHILE expresion sentencia END
Rule 68    forINS -> FOR ID IN expresion DOSPUNTOS expresion sentencia END
Rule 69    forINS -> FOR ID IN expresion sentencia END
Rule 70    breakINS -> BREAK
Rule 71    continueINS -> CONTINUE
Rule 72    ifINS -> IF expresion sentencia END
Rule 73    ifINS -> IF expresion sentencia ELSE sentencia END
Rule 74    ifINS -> IF expresion sentencia elseIfLista END
Rule 75    elseIfLista -> ELSEIF expresion sentencia
Rule 76    elseIfLista -> ELSEIF expresion sentencia ELSE sentencia
Rule 77    elseIfLista -> ELSEIF expresion sentencia elseIfLista
Rule 78    newStruct -> STRUCT ID atributosStr END
Rule 79    newStruct -> MUTABLE STRUCT ID atributosStr END
Rule 80    atributosStr -> atributosStr ID PUNTOCOMA
Rule 81    atributosStr -> ID PUNTOCOMA
Rule 82    atributosStr -> atributosStr ID DOSPUNTOS DOSPUNTOS tipos PUNTOCOMA
Rule 83    atributosStr -> ID DOSPUNTOS DOSPUNTOS tipos PUNTOCOMA
Rule 84    expresion -> MENOS expresion
Rule 85    expresion -> NOT expresion
Rule 86    expresion -> expresion MAS expresion
Rule 87    expresion -> expresion MENOS expresion
Rule 88    expresion -> expresion MULT expresion
Rule 89    expresion -> expresion DIV expresion
Rule 90    expresion -> expresion MOD expresion
Rule 91    expresion -> expresion POT expresion
Rule 92    expresion -> expresion MAYOR expresion
Rule 93    expresion -> expresion MENOR expresion
Rule 94    expresion -> expresion MAYORIGUAL expresion
Rule 95    expresion -> expresion MENORIGUAL expresion
Rule 96    expresion -> expresion IGUALES expresion
Rule 97    expresion -> expresion DISTINTOS expresion
Rule 98    expresion -> expresion OR expresion
Rule 99    expresion -> expresion AND expresion
Rule 100   expresion -> expValor
Rule 101   expValor -> PARIZQ expresion PARDER
Rule 102   expValor -> INTID
Rule 103   expValor -> FLOATID
Rule 104   expValor -> STRINGID
Rule 105   expValor -> expCHAR
Rule 106   expValor -> expNativas
Rule 107   expValor -> TRUE
Rule 108   expValor -> FALSE
Rule 109   expValor -> ID
Rule 110   expValor -> NOTHING
Rule 111   expValor -> llamadaFunc
Rule 112   expValor -> accesoStruct
Rule 113   expValor -> defArreglo
Rule 114   expValor -> accesoArreglo
Rule 115   expValor -> cutArreglo
Rule 116   expValor -> popArreglo
Rule 117   expValor -> lenArreglo
Rule 118   expCHAR -> CHARID
Rule 119   expNativas -> LOG10 PARIZQ expresion PARDER
Rule 120   expNativas -> LOG PARIZQ expresion COMA expresion PARDER
Rule 121   expNativas -> SIN PARIZQ expresion PARDER
Rule 122   expNativas -> COS PARIZQ expresion PARDER
Rule 123   expNativas -> TAN PARIZQ expresion PARDER
Rule 124   expNativas -> SQRT PARIZQ expresion PARDER
Rule 125   expNativas -> UPPERCASE PARIZQ expresion PARDER
Rule 126   expNativas -> LOWERCASE PARIZQ expresion PARDER
Rule 127   expNativas -> PARSE PARIZQ INT64 COMA expresion PARDER
Rule 128   expNativas -> PARSE PARIZQ FLOAT64 COMA expresion PARDER
Rule 129   expNativas -> TRUNC PARIZQ expresion PARDER
Rule 130   expNativas -> FLOAT PARIZQ expresion PARDER
Rule 131   expNativas -> STRING PARIZQ expresion PARDER
Rule 132   expNativas -> TYPEOF PARIZQ expresion PARDER
Rule 133   accesoStruct -> ID PUNTO ID
Rule 134   accesoStruct -> accesoStruct PUNTO ID
Rule 135   defArreglo -> CORIZQ listParams CORDER
Rule 136   accesoArreglo -> ID CORIZQ expresion CORDER
Rule 137   accesoArreglo -> accesoArreglo CORIZQ expresion CORDER
Rule 138   cutArreglo -> accesoArreglo CORIZQ expresion DOSPUNTOS expresion CORDER
Rule 139   cutArreglo -> ID CORIZQ expresion DOSPUNTOS expresion CORDER
Rule 140   popArreglo -> POP NOT PARIZQ accesoArreglo PARDER
Rule 141   popArreglo -> POP NOT PARIZQ ID PARDER
Rule 142   lenArreglo -> LENGTH PARIZQ accesoArreglo PARDER
Rule 143   lenArreglo -> LENGTH PARIZQ ID PARDER
Rule 144   pushArreglo -> PUSH NOT PARIZQ accesoArreglo COMA expresion PARDER
Rule 145   pushArreglo -> PUSH NOT PARIZQ ID COMA expresion PARDER

Terminals, with rules where they appear

AND                  : 99
BOOL                 : 61
BREAK                : 70
CHAR                 : 62
CHARID               : 118
COMA                 : 22 23 28 120 127 128 144 145
CONTINUE             : 71
CORDER               : 135 136 137 138 139
CORIZQ               : 135 136 137 138 139
COS                  : 122
DISTINTOS            : 97
DIV                  : 89
DOSPUNTOS            : 17 17 20 20 21 21 23 23 25 25 54 54 57 57 68 82 82 83 83 138 139
ELSE                 : 73 76
ELSEIF               : 75 76 77
END                  : 18 19 20 21 67 68 69 72 73 74 78 79
FALSE                : 108
FLOAT                : 130
FLOAT64              : 59 128
FLOATID              : 103
FOR                  : 68 69
FUNCTION             : 18 19 20 21
GLOBAL               : 64
ID                   : 15 16 17 18 19 20 21 22 23 24 25 26 27 52 53 54 55 56 57 68 69 78 79 80 81 82 83 109 133 133 134 136 139 141 143 145
IF                   : 72 73 74
IGUAL                : 16 17 53 54 56 57 65 66
IGUALES              : 96
IN                   : 68 69
INT64                : 58 127
INTID                : 102
LENGTH               : 142 143
LOCAL                : 63
LOG                  : 120
LOG10                : 119
LOWERCASE            : 126
MAS                  : 86
MAYOR                : 92
MAYORIGUAL           : 94
MENOR                : 93
MENORIGUAL           : 95
MENOS                : 84 87
MOD                  : 90
MULT                 : 88
MUTABLE              : 79
NOT                  : 85 140 141 144 145
NOTHING              : 110
OR                   : 98
PARDER               : 18 19 20 21 26 27 48 49 50 51 101 119 120 121 122 123 124 125 126 127 128 129 130 131 132 140 141 142 143 144 145
PARIZQ               : 18 19 20 21 26 27 48 49 50 51 101 119 120 121 122 123 124 125 126 127 128 129 130 131 132 140 141 142 143 144 145
PARSE                : 127 128
POP                  : 140 141
POT                  : 91
PRINT                : 50 51
PRINTLN              : 48 49
PUNTO                : 133 134
PUNTOCOMA            : 4 5 6 7 8 9 10 11 12 13 14 34 35 36 37 38 39 40 41 42 43 44 45 46 80 81 82 83
PUSH                 : 144 145
RETURN               : 30 31
SIN                  : 121
SQRT                 : 124
STRING               : 60 131
STRINGID             : 104
STRUCT               : 78 79
TAN                  : 123
TRUE                 : 107
TRUNC                : 129
TYPEOF               : 132
UPPERCASE            : 125
WHILE                : 67
error                : 

Nonterminals, with rules where they appear

accesoArreglo        : 66 114 137 138 140 142 144
accesoStruct         : 65 112 134
accesos              : 55 56 57
asignacionArreglo    : 14 46
asignacionStruct     : 13 45
atributosStr         : 78 79 80 82
breakINS             : 41
continueINS          : 42
cutArreglo           : 115
declaracionINS       : 34
declaracionglb       : 5
defArreglo           : 113
elseIfLista          : 74 77
expCHAR              : 105
expNativas           : 106
expValor             : 100
expresion            : 16 17 28 29 31 53 54 56 57 65 66 67 68 68 69 72 73 74 75 76 77 84 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 101 119 120 120 121 122 123 124 125 126 127 128 129 130 131 132 136 137 138 138 139 139 144 145
forINS               : 10 40
funcionINS           : 4
ifINS                : 8 37
inicio               : 0
instruccion          : 32 33
instrucciones        : 32 47
instruccionesglb     : 1 2
instruccionglb       : 2 3
lenArreglo           : 117
listParams           : 27 28 48 50 135
llamadaFunc          : 7 36 111
newStruct            : 11 43
params               : 19 21 22 23
popArreglo           : 116
printINS             : 6 35
pushArreglo          : 12 44
returnINS            : 38
sentencia            : 18 19 20 21 67 68 69 72 73 73 74 75 76 76 77
tipos                : 17 20 21 23 25 54 57 82 83
whileINS             : 9 39

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instruccionesglb
    (2) instruccionesglb -> . instruccionesglb instruccionglb
    (3) instruccionesglb -> . instruccionglb
    (4) instruccionglb -> . funcionINS PUNTOCOMA
    (5) instruccionglb -> . declaracionglb PUNTOCOMA
    (6) instruccionglb -> . printINS PUNTOCOMA
    (7) instruccionglb -> . llamadaFunc PUNTOCOMA
    (8) instruccionglb -> . ifINS PUNTOCOMA
    (9) instruccionglb -> . whileINS PUNTOCOMA
    (10) instruccionglb -> . forINS PUNTOCOMA
    (11) instruccionglb -> . newStruct PUNTOCOMA
    (12) instruccionglb -> . pushArreglo PUNTOCOMA
    (13) instruccionglb -> . asignacionStruct PUNTOCOMA
    (14) instruccionglb -> . asignacionArreglo PUNTOCOMA
    (18) funcionINS -> . FUNCTION ID PARIZQ PARDER sentencia END
    (19) funcionINS -> . FUNCTION ID PARIZQ params PARDER sentencia END
    (20) funcionINS -> . FUNCTION ID PARIZQ PARDER DOSPUNTOS DOSPUNTOS tipos sentencia END
    (21) funcionINS -> . FUNCTION ID PARIZQ params PARDER DOSPUNTOS DOSPUNTOS tipos sentencia END
    (15) declaracionglb -> . ID
    (16) declaracionglb -> . ID IGUAL expresion
    (17) declaracionglb -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
    (48) printINS -> . PRINTLN PARIZQ listParams PARDER
    (49) printINS -> . PRINTLN PARIZQ PARDER
    (50) printINS -> . PRINT PARIZQ listParams PARDER
    (51) printINS -> . PRINT PARIZQ PARDER
    (26) llamadaFunc -> . ID PARIZQ PARDER
    (27) llamadaFunc -> . ID PARIZQ listParams PARDER
    (72) ifINS -> . IF expresion sentencia END
    (73) ifINS -> . IF expresion sentencia ELSE sentencia END
    (74) ifINS -> . IF expresion sentencia elseIfLista END
    (67) whileINS -> . WHILE expresion sentencia END
    (68) forINS -> . FOR ID IN expresion DOSPUNTOS expresion sentencia END
    (69) forINS -> . FOR ID IN expresion sentencia END
    (78) newStruct -> . STRUCT ID atributosStr END
    (79) newStruct -> . MUTABLE STRUCT ID atributosStr END
    (144) pushArreglo -> . PUSH NOT PARIZQ accesoArreglo COMA expresion PARDER
    (145) pushArreglo -> . PUSH NOT PARIZQ ID COMA expresion PARDER
    (65) asignacionStruct -> . accesoStruct IGUAL expresion
    (66) asignacionArreglo -> . accesoArreglo IGUAL expresion
    (133) accesoStruct -> . ID PUNTO ID
    (134) accesoStruct -> . accesoStruct PUNTO ID
    (136) accesoArreglo -> . ID CORIZQ expresion CORDER
    (137) accesoArreglo -> . accesoArreglo CORIZQ expresion CORDER

    FUNCTION        shift and go to state 15
    ID              shift and go to state 16
    PRINTLN         shift and go to state 17
    PRINT           shift and go to state 18
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    STRUCT          shift and go to state 22
    MUTABLE         shift and go to state 23
    PUSH            shift and go to state 24

    inicio                         shift and go to state 1
    instruccionesglb               shift and go to state 2
    instruccionglb                 shift and go to state 3
    funcionINS                     shift and go to state 4
    declaracionglb                 shift and go to state 5
    printINS                       shift and go to state 6
    llamadaFunc                    shift and go to state 7
    ifINS                          shift and go to state 8
    whileINS                       shift and go to state 9
    forINS                         shift and go to state 10
    newStruct                      shift and go to state 11
    pushArreglo                    shift and go to state 12
    asignacionStruct               shift and go to state 13
    asignacionArreglo              shift and go to state 14
    accesoArreglo                  shift and go to state 25
    accesoStruct                   shift and go to state 26

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instruccionesglb .
    (2) instruccionesglb -> instruccionesglb . instruccionglb
    (4) instruccionglb -> . funcionINS PUNTOCOMA
    (5) instruccionglb -> . declaracionglb PUNTOCOMA
    (6) instruccionglb -> . printINS PUNTOCOMA
    (7) instruccionglb -> . llamadaFunc PUNTOCOMA
    (8) instruccionglb -> . ifINS PUNTOCOMA
    (9) instruccionglb -> . whileINS PUNTOCOMA
    (10) instruccionglb -> . forINS PUNTOCOMA
    (11) instruccionglb -> . newStruct PUNTOCOMA
    (12) instruccionglb -> . pushArreglo PUNTOCOMA
    (13) instruccionglb -> . asignacionStruct PUNTOCOMA
    (14) instruccionglb -> . asignacionArreglo PUNTOCOMA
    (18) funcionINS -> . FUNCTION ID PARIZQ PARDER sentencia END
    (19) funcionINS -> . FUNCTION ID PARIZQ params PARDER sentencia END
    (20) funcionINS -> . FUNCTION ID PARIZQ PARDER DOSPUNTOS DOSPUNTOS tipos sentencia END
    (21) funcionINS -> . FUNCTION ID PARIZQ params PARDER DOSPUNTOS DOSPUNTOS tipos sentencia END
    (15) declaracionglb -> . ID
    (16) declaracionglb -> . ID IGUAL expresion
    (17) declaracionglb -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
    (48) printINS -> . PRINTLN PARIZQ listParams PARDER
    (49) printINS -> . PRINTLN PARIZQ PARDER
    (50) printINS -> . PRINT PARIZQ listParams PARDER
    (51) printINS -> . PRINT PARIZQ PARDER
    (26) llamadaFunc -> . ID PARIZQ PARDER
    (27) llamadaFunc -> . ID PARIZQ listParams PARDER
    (72) ifINS -> . IF expresion sentencia END
    (73) ifINS -> . IF expresion sentencia ELSE sentencia END
    (74) ifINS -> . IF expresion sentencia elseIfLista END
    (67) whileINS -> . WHILE expresion sentencia END
    (68) forINS -> . FOR ID IN expresion DOSPUNTOS expresion sentencia END
    (69) forINS -> . FOR ID IN expresion sentencia END
    (78) newStruct -> . STRUCT ID atributosStr END
    (79) newStruct -> . MUTABLE STRUCT ID atributosStr END
    (144) pushArreglo -> . PUSH NOT PARIZQ accesoArreglo COMA expresion PARDER
    (145) pushArreglo -> . PUSH NOT PARIZQ ID COMA expresion PARDER
    (65) asignacionStruct -> . accesoStruct IGUAL expresion
    (66) asignacionArreglo -> . accesoArreglo IGUAL expresion
    (133) accesoStruct -> . ID PUNTO ID
    (134) accesoStruct -> . accesoStruct PUNTO ID
    (136) accesoArreglo -> . ID CORIZQ expresion CORDER
    (137) accesoArreglo -> . accesoArreglo CORIZQ expresion CORDER

    $end            reduce using rule 1 (inicio -> instruccionesglb .)
    FUNCTION        shift and go to state 15
    ID              shift and go to state 16
    PRINTLN         shift and go to state 17
    PRINT           shift and go to state 18
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    STRUCT          shift and go to state 22
    MUTABLE         shift and go to state 23
    PUSH            shift and go to state 24

    instruccionglb                 shift and go to state 27
    funcionINS                     shift and go to state 4
    declaracionglb                 shift and go to state 5
    printINS                       shift and go to state 6
    llamadaFunc                    shift and go to state 7
    ifINS                          shift and go to state 8
    whileINS                       shift and go to state 9
    forINS                         shift and go to state 10
    newStruct                      shift and go to state 11
    pushArreglo                    shift and go to state 12
    asignacionStruct               shift and go to state 13
    asignacionArreglo              shift and go to state 14
    accesoArreglo                  shift and go to state 25
    accesoStruct                   shift and go to state 26

state 3

    (3) instruccionesglb -> instruccionglb .

    FUNCTION        reduce using rule 3 (instruccionesglb -> instruccionglb .)
    ID              reduce using rule 3 (instruccionesglb -> instruccionglb .)
    PRINTLN         reduce using rule 3 (instruccionesglb -> instruccionglb .)
    PRINT           reduce using rule 3 (instruccionesglb -> instruccionglb .)
    IF              reduce using rule 3 (instruccionesglb -> instruccionglb .)
    WHILE           reduce using rule 3 (instruccionesglb -> instruccionglb .)
    FOR             reduce using rule 3 (instruccionesglb -> instruccionglb .)
    STRUCT          reduce using rule 3 (instruccionesglb -> instruccionglb .)
    MUTABLE         reduce using rule 3 (instruccionesglb -> instruccionglb .)
    PUSH            reduce using rule 3 (instruccionesglb -> instruccionglb .)
    $end            reduce using rule 3 (instruccionesglb -> instruccionglb .)


state 4

    (4) instruccionglb -> funcionINS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 28


state 5

    (5) instruccionglb -> declaracionglb . PUNTOCOMA

    PUNTOCOMA       shift and go to state 29


state 6

    (6) instruccionglb -> printINS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30


state 7

    (7) instruccionglb -> llamadaFunc . PUNTOCOMA

    PUNTOCOMA       shift and go to state 31


state 8

    (8) instruccionglb -> ifINS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 32


state 9

    (9) instruccionglb -> whileINS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 33


state 10

    (10) instruccionglb -> forINS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34


state 11

    (11) instruccionglb -> newStruct . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35


state 12

    (12) instruccionglb -> pushArreglo . PUNTOCOMA

    PUNTOCOMA       shift and go to state 36


state 13

    (13) instruccionglb -> asignacionStruct . PUNTOCOMA

    PUNTOCOMA       shift and go to state 37


state 14

    (14) instruccionglb -> asignacionArreglo . PUNTOCOMA

    PUNTOCOMA       shift and go to state 38


state 15

    (18) funcionINS -> FUNCTION . ID PARIZQ PARDER sentencia END
    (19) funcionINS -> FUNCTION . ID PARIZQ params PARDER sentencia END
    (20) funcionINS -> FUNCTION . ID PARIZQ PARDER DOSPUNTOS DOSPUNTOS tipos sentencia END
    (21) funcionINS -> FUNCTION . ID PARIZQ params PARDER DOSPUNTOS DOSPUNTOS tipos sentencia END

    ID              shift and go to state 39


state 16

    (15) declaracionglb -> ID .
    (16) declaracionglb -> ID . IGUAL expresion
    (17) declaracionglb -> ID . IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
    (26) llamadaFunc -> ID . PARIZQ PARDER
    (27) llamadaFunc -> ID . PARIZQ listParams PARDER
    (133) accesoStruct -> ID . PUNTO ID
    (136) accesoArreglo -> ID . CORIZQ expresion CORDER

    PUNTOCOMA       reduce using rule 15 (declaracionglb -> ID .)
    IGUAL           shift and go to state 40
    PARIZQ          shift and go to state 41
    PUNTO           shift and go to state 42
    CORIZQ          shift and go to state 43


state 17

    (48) printINS -> PRINTLN . PARIZQ listParams PARDER
    (49) printINS -> PRINTLN . PARIZQ PARDER

    PARIZQ          shift and go to state 44


state 18

    (50) printINS -> PRINT . PARIZQ listParams PARDER
    (51) printINS -> PRINT . PARIZQ PARDER

    PARIZQ          shift and go to state 45


state 19

    (72) ifINS -> IF . expresion sentencia END
    (73) ifINS -> IF . expresion sentencia ELSE sentencia END
    (74) ifINS -> IF . expresion sentencia elseIfLista END
    (84) expresion -> . MENOS expresion
    (85) expresion -> . NOT expresion
    (86) expresion -> . expresion MAS expresion
    (87) expresion -> . expresion MENOS expresion
    (88) expresion -> . expresion MULT expresion
    (89) expresion -> . expresion DIV expresion
    (90) expresion -> . expresion MOD expresion
    (91) expresion -> . expresion POT expresion
    (92) expresion -> . expresion MAYOR expresion
    (93) expresion -> . expresion MENOR expresion
    (94) expresion -> . expresion MAYORIGUAL expresion
    (95) expresion -> . expresion MENORIGUAL expresion
    (96) expresion -> . expresion IGUALES expresion
    (97) expresion -> . expresion DISTINTOS expresion
    (98) expresion -> . expresion OR expresion
    (99) expresion -> . expresion AND expresion
    (100) expresion -> . expValor
    (101) expValor -> . PARIZQ expresion PARDER
    (102) expValor -> . INTID
    (103) expValor -> . FLOATID
    (104) expValor -> . STRINGID
    (105) expValor -> . expCHAR
    (106) expValor -> . expNativas
    (107) expValor -> . TRUE
    (108) expValor -> . FALSE
    (109) expValor -> . ID
    (110) expValor -> . NOTHING
    (111) expValor -> . llamadaFunc
    (112) expValor -> . accesoStruct
    (113) expValor -> . defArreglo
    (114) expValor -> . accesoArreglo
    (115) expValor -> . cutArreglo
    (116) expValor -> . popArreglo
    (117) expValor -> . lenArreglo
    (118) expCHAR -> . CHARID
    (119) expNativas -> . LOG10 PARIZQ expresion PARDER
    (120) expNativas -> . LOG PARIZQ expresion COMA expresion PARDER
    (121) expNativas -> . SIN PARIZQ expresion PARDER
    (122) expNativas -> . COS PARIZQ expresion PARDER
    (123) expNativas -> . TAN PARIZQ expresion PARDER
    (124) expNativas -> . SQRT PARIZQ expresion PARDER
    (125) expNativas -> . UPPERCASE PARIZQ expresion PARDER
    (126) expNativas -> . LOWERCASE PARIZQ expresion PARDER
    (127) expNativas -> . PARSE PARIZQ INT64 COMA expresion PARDER
    (128) expNativas -> . PARSE PARIZQ FLOAT64 COMA expresion PARDER
    (129) expNativas -> . TRUNC PARIZQ expresion PARDER
    (130) expNativas -> . FLOAT PARIZQ expresion PARDER
    (131) expNativas -> . STRING PARIZQ expresion PARDER
    (132) expNativas -> . TYPEOF PARIZQ expresion PARDER
    (26) llamadaFunc -> . ID PARIZQ PARDER
    (27) llamadaFunc -> . ID PARIZQ listParams PARDER
    (133) accesoStruct -> . ID PUNTO ID
    (134) accesoStruct -> . accesoStruct PUNTO ID
    (135) defArreglo -> . CORIZQ listParams CORDER
    (136) accesoArreglo -> . ID CORIZQ expresion CORDER
    (137) accesoArreglo -> . accesoArreglo CORIZQ expresion CORDER
    (138) cutArreglo -> . accesoArreglo CORIZQ expresion DOSPUNTOS expresion CORDER
    (139) cutArreglo -> . ID CORIZQ expresion DOSPUNTOS expresion CORDER
    (140) popArreglo -> . POP NOT PARIZQ accesoArreglo PARDER
    (141) popArreglo -> . POP NOT PARIZQ ID PARDER
    (142) lenArreglo -> . LENGTH PARIZQ accesoArreglo PARDER
    (143) lenArreglo -> . LENGTH PARIZQ ID PARDER

    MENOS           shift and go to state 47
    NOT             shift and go to state 48
    PARIZQ          shift and go to state 50
    INTID           shift and go to state 51
    FLOATID         shift and go to state 52
    STRINGID        shift and go to state 53
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    ID              shift and go to state 58
    NOTHING         shift and go to state 59
    CHARID          shift and go to state 67
    LOG10           shift and go to state 68
    LOG             shift and go to state 69
    SIN             shift and go to state 70
    COS             shift and go to state 71
    TAN             shift and go to state 72
    SQRT            shift and go to state 73
    UPPERCASE       shift and go to state 74
    LOWERCASE       shift and go to state 75
    PARSE           shift and go to state 76
    TRUNC           shift and go to state 77
    FLOAT           shift and go to state 78
    STRING          shift and go to state 79
    TYPEOF          shift and go to state 80
    CORIZQ          shift and go to state 81
    POP             shift and go to state 82
    LENGTH          shift and go to state 83

    expresion                      shift and go to state 46
    expValor                       shift and go to state 49
    expCHAR                        shift and go to state 54
    expNativas                     shift and go to state 55
    llamadaFunc                    shift and go to state 60
    accesoStruct                   shift and go to state 61
    defArreglo                     shift and go to state 62
    accesoArreglo                  shift and go to state 63
    cutArreglo                     shift and go to state 64
    popArreglo                     shift and go to state 65
    lenArreglo                     shift and go to state 66

state 20

    (67) whileINS -> WHILE . expresion sentencia END
    (84) expresion -> . MENOS expresion
    (85) expresion -> . NOT expresion
    (86) expresion -> . expresion MAS expresion
    (87) expresion -> . expresion MENOS expresion
    (88) expresion -> . expresion MULT expresion
    (89) expresion -> . expresion DIV expresion
    (90) expresion -> . expresion MOD expresion
    (91) expresion -> . expresion POT expresion
    (92) expresion -> . expresion MAYOR expresion
    (93) expresion -> . expresion MENOR expresion
    (94) expresion -> . expresion MAYORIGUAL expresion
    (95) expresion -> . expresion MENORIGUAL expresion
    (96) expresion -> . expresion IGUALES expresion
    (97) expresion -> . expresion DISTINTOS expresion
    (98) expresion -> . expresion OR expresion
    (99) expresion -> . expresion AND expresion
    (100) expresion -> . expValor
    (101) expValor -> . PARIZQ expresion PARDER
    (102) expValor -> . INTID
    (103) expValor -> . FLOATID
    (104) expValor -> . STRINGID
    (105) expValor -> . expCHAR
    (106) expValor -> . expNativas
    (107) expValor -> . TRUE
    (108) expValor -> . FALSE
    (109) expValor -> . ID
    (110) expValor -> . NOTHING
    (111) expValor -> . llamadaFunc
    (112) expValor -> . accesoStruct
    (113) expValor -> . defArreglo
    (114) expValor -> . accesoArreglo
    (115) expValor -> . cutArreglo
    (116) expValor -> . popArreglo
    (117) expValor -> . lenArreglo
    (118) expCHAR -> . CHARID
    (119) expNativas -> . LOG10 PARIZQ expresion PARDER
    (120) expNativas -> . LOG PARIZQ expresion COMA expresion PARDER
    (121) expNativas -> . SIN PARIZQ expresion PARDER
    (122) expNativas -> . COS PARIZQ expresion PARDER
    (123) expNativas -> . TAN PARIZQ expresion PARDER
    (124) expNativas -> . SQRT PARIZQ expresion PARDER
    (125) expNativas -> . UPPERCASE PARIZQ expresion PARDER
    (126) expNativas -> . LOWERCASE PARIZQ expresion PARDER
    (127) expNativas -> . PARSE PARIZQ INT64 COMA expresion PARDER
    (128) expNativas -> . PARSE PARIZQ FLOAT64 COMA expresion PARDER
    (129) expNativas -> . TRUNC PARIZQ expresion PARDER
    (130) expNativas -> . FLOAT PARIZQ expresion PARDER
    (131) expNativas -> . STRING PARIZQ expresion PARDER
    (132) expNativas -> . TYPEOF PARIZQ expresion PARDER
    (26) llamadaFunc -> . ID PARIZQ PARDER
    (27) llamadaFunc -> . ID PARIZQ listParams PARDER
    (133) accesoStruct -> . ID PUNTO ID
    (134) accesoStruct -> . accesoStruct PUNTO ID
    (135) defArreglo -> . CORIZQ listParams CORDER
    (136) accesoArreglo -> . ID CORIZQ expresion CORDER
    (137) accesoArreglo -> . accesoArreglo CORIZQ expresion CORDER
    (138) cutArreglo -> . accesoArreglo CORIZQ expresion DOSPUNTOS expresion CORDER
    (139) cutArreglo -> . ID CORIZQ expresion DOSPUNTOS expresion CORDER
    (140) popArreglo -> . POP NOT PARIZQ accesoArreglo PARDER
    (141) popArreglo -> . POP NOT PARIZQ ID PARDER
    (142) lenArreglo -> . LENGTH PARIZQ accesoArreglo PARDER
    (143) lenArreglo -> . LENGTH PARIZQ ID PARDER
